; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/pci/hotplug/extr_rpadlpar_sysfs.c_dlpar_sysfs_init.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/pci/hotplug/extr_rpadlpar_sysfs.c_dlpar_sysfs_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@DLPAR_KOBJ_NAME = common dso_local global i32 0, align 4
@pci_slots_kset = common dso_local global %struct.TYPE_2__* null, align 8
@dlpar_kobj = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@dlpar_attr_group = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dlpar_sysfs_init() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @DLPAR_KOBJ_NAME, align 4
  %4 = load %struct.TYPE_2__*, %struct.TYPE_2__** @pci_slots_kset, align 8
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  %6 = call i32 @kobject_create_and_add(i32 %3, i32* %5)
  store i32 %6, i32* @dlpar_kobj, align 4
  %7 = load i32, i32* @dlpar_kobj, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %12, label %9

9:                                                ; preds = %0
  %10 = load i32, i32* @EINVAL, align 4
  %11 = sub nsw i32 0, %10
  store i32 %11, i32* %1, align 4
  br label %22

12:                                               ; preds = %0
  %13 = load i32, i32* @dlpar_kobj, align 4
  %14 = call i32 @sysfs_create_group(i32 %13, i32* @dlpar_attr_group)
  store i32 %14, i32* %2, align 4
  %15 = load i32, i32* %2, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %12
  %18 = load i32, i32* @dlpar_kobj, align 4
  %19 = call i32 @kobject_put(i32 %18)
  br label %20

20:                                               ; preds = %17, %12
  %21 = load i32, i32* %2, align 4
  store i32 %21, i32* %1, align 4
  br label %22

22:                                               ; preds = %20, %9
  %23 = load i32, i32* %1, align 4
  ret i32 %23
}

declare dso_local i32 @kobject_create_and_add(i32, i32*) #1

declare dso_local i32 @sysfs_create_group(i32, i32*) #1

declare dso_local i32 @kobject_put(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
